--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <h1>Hello World, we are software developers!</h1>
+    <h1 id ="title">Hello World, we are software developers!</h1>
+    <p id="description"></p>
+    <form id = "survey-form"></form>
+
     <script  src="js/index.js"></script>
   </body>
 </html>
