--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <h1 id ="title">Hello World, we are software developers!</h1>
-    <p id="description"></p>
-    <form id = "survey-form"></form>
+     <h1 id ="title">Hello World, we are software developers!</h1>
+    <p id="description">Hello World</p>
+    <form id = "survey-form">
+
+      <input type="text" id = "name" required>
+      FirstName && LastName
+      </input>
+      <input type="email" id = "email" required>
+     
+      </input>
+    </form>
 
     <script  src="js/index.js"></script>
   </body>
