--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>Title</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
 
@@ -13,12 +13,9 @@
     <p id="description">Hello World</p>
     <form id = "survey-form">
 
-      <input type="text" id = "name" required>
-      FirstName && LastName
-      </input>
-      <input type="email" id = "email" required>
-     
-      </input>
+      <input type="text" id = "name" required></input>
+      <input type="email" id = "email" required></input>
+      <input max = 20 min = 1 type ="number"id="number"></input>
     </form>
 
     <script  src="js/index.js"></script>
