--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
   <option></option>
       </select>
       <select>
-<input type="radio" name="ambroise" value="ambroise"></input>  
- <input type="radio" name="ambroise" value="ambroise"></input> 
+<input type="radio" name="ambroise" value="ambroise"></input>
+ <input type="radio" name="ambroise" value="ambroise"></input>
       </select>
-     
-   
+      <select >
+        <input value = "check1"type = "checkbox"></input>
+        <input value = "check2" type = "checkbox"></input>
+      </select>
+     <textarea></textarea>
+     <button id = "submit"></button>
+
     </form>
 
     <script  src="js/index.js"></script>
